[build-system]
requires = ["setuptools >= 61.0.0", "click"]
build-backend = "setuptools.build_meta"

[project]
name = "compgraph"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
    {name = "Boris Panfilov", email = "bspanfilov@edu.hse.ru"},
]
description = "Packege for building compgraphs"
readme = "LIB_README.md"
license = {text = "BSD-3-Clause"}
dependencies = [
    "click",
]
